--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "expo": {
     "name": "little-lemon-app",
+    "owner": "Marvin M. Pacis",
     "slug": "little-lemon-app",
     "description": "This application is a React Native Food App. Users will have to go through a registration process. Once they successfully complete that phase, they are redirected to a home screen where they can search and filter menu items. User can also change their preferences in Profile page",
     "version": "1.0.0",
