--- a/package.json
+++ b/package.json
@@ -14,21 +14,23 @@
     "@react-navigation/native-stack": "^6.9.8",
     "expo": "~47.0.12",
     "expo-checkbox": "~2.2.2",
+    "expo-font": "~11.0.1",
     "expo-image-picker": "~14.0.2",
+    "expo-splash-screen": "~0.17.5",
+    "expo-sqlite": "~11.0.0",
     "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.6",
+    "lodash.debounce": "^4.0.8",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-pager-view": "6.0.1",
     "react-native-paper": "^5.1.3",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
-    "expo-sqlite": "~11.0.0",
-    "expo-font": "~11.0.1",
-    "expo-splash-screen": "~0.17.5",
-    "expo-updates": "~0.15.6"
+    "react-native-screens": "~3.18.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/react-native": "^0.73.0"
   },
   "private": true
 }
