feat: publish app to Expo using EAS update
- Integrate EAS update for seamless over-the-air updates
- Configure Expo project settings for EAS
- Ensure app builds and deploys correctly to Expo

--- a/app.json
+++ b/app.json
@@ -14,9 +14,12 @@
       "backgroundColor": "#ffffff"
     },
     "updates": {
-      "fallbackToCacheTimeout": 0
+      "fallbackToCacheTimeout": 0,
+      "url": "https://u.expo.dev/221d2bc0-e34d-4538-b828-2e1cabe5bba7"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -28,6 +31,14 @@
     },
     "web": {
       "favicon": "./assets/Logo.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "221d2bc0-e34d-4538-b828-2e1cabe5bba7"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "sdkVersion"
     }
   }
 }
